# kaggle-works

./: .gitignore  README.md  pyproject.toml
src/kaggle_works/: __init__.py
