[project]
name = "kaggle-works"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "gizmrkv", email = "gizmrkv@gmail.com" }
]
dependencies = [
    "kaggle>=1.6.17",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle_works"]
